# hello-kafka-data-pipelines

./: README.md  docker-compose.yml  main.py  pyproject.toml  stream_spark.py
dags/: kafka_stream.py
script/: entrypoint.sh
